package exceptions;

public class DestinationException extends Exception {

    public DestinationException(String message) {
        super(message);
    }

}
