package exceptions;

public class HomsaZeroCookiesException extends RuntimeException {

    public HomsaZeroCookiesException(String message) {
        super(message);
    }

}
